Implement P4 independent desktop and native account switching
