# frontend/openapi.json
@@ -1974,7 +1974,10 @@
         "properties": {
           "mode": {
             "type": "string",
-            "const": "server",
+            "enum": [
+              "server",
+              "local"
+            ],
             "title": "Mode"
           },
           "initialized": {
